# passman-rs

./: Cargo.toml  README.md
src/: args.rs  cli.rs  crypto.rs  db_ops.rs  error.rs  main.rs  password.rs
src/backend/: crypto.rs  db_ops.rs  error.rs
