[package]
name = "passmanrsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crypto deps
sha2 = "0.10.7"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"

rusqlite = { version = "0.29.0", features = ["bundled"] }