[package]
name = "passmanrsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crypto dependencies

sha2 = "0.10.7"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"


hex = "0.4.3"
anyhow = "1.0.75"
# DB orm
# pwd-rs used diesel which i didn't really like, trying rusqlite
# 
rusqlite = { version = "0.29.0", features = ["bundled"] }

# CLI frontend

cliclack = "0.1.9"
