[package]
name = "passmanrsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crypto dependencies

sha2 = "0.10.7"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
typenum = "1.17.0"

hex = "0.4.3"
hex-literal = "0.4.1"



# error handling and propagation

anyhow = "1.0"
thiserror = "1.0"
# DB orm
# pwd-rs used diesel which i didn't really like, trying rusqlite
# 
rusqlite = { version = "0.29.0", features = ["bundled"] }

# CLI frontend

cliclack = "0.1.9"
colored = "2.0.4"
